<resources>
    <string name="app_name">ColdWallet</string>
    <string name="app_name_pinyin">ColdWallet</string>
    <string name="register_error_msg1">不能为空</string>
    <string name="register_error_msg2">不一致</string>
    <string name="register_error_msg3">用户名请输入6位以上包含数字字母</string>
    <string name="register_error_msg4">手机号格式不正确</string>
    <string name="register_error_msg5">登录密码请输入6位以上包含数字字母</string>
    <string name="register_error_msg6">支付密码请输入6位以上包含数字字母</string>
    <string name="home_bar_chat">聊天</string>
    <string name="home_bar_friends">好友</string>
    <string name="home_bar_find">发现</string>
    <string name="home_bar_money">资产</string>
    <string name="please_wait">敬请期待</string>
    <string name="menu_item_chat">聊天设置</string>
    <string name="menu_item_security">安全设置</string>
    <string name="menu_item_language_switching">语言切换</string>
    <string name="menu_item_about">关于ALSC</string>
    <string name="menu_item_invite_friends">分享好友</string>
    <string name="menu_item_system">系统公告</string>
    <string name="menu_item_switching_accounts">切换账户</string>
    <string name="property_drawer_qrcode_scanner">扫一扫</string>
    <string name="addr_error_tips">地址填写不正确</string>
    <string name="security_change_login_password">修改登录密码</string>
    <string name="security_change_pay_password">修改支付密码</string>
    <string name="security_find_pay_password">找回支付密码</string>
    <string name="security_google">谷歌验证</string>
    <string name="security_phone">手机</string>
    <string name="security_email">邮箱</string>
    <string name="security_binded">已绑定</string>
    <string name="security_no_bind">未绑定</string>
    <string name="security_opened">已开启</string>
    <string name="security_no_open">未开启</string>
    <string name="security_input_old_password">请输入旧密码</string>
    <string name="security_input_new_password">请输入新密码</string>
    <string name="security_input_new_password_again">请再次输入新密码</string>
    <string name="security_input_new_pay_password">请输入新支付密码</string>
    <string name="security_input_new_pay_password_again">请确认新支付密码</string>
    <string name="open_camera_light">扫描二维码需要打开相机和散光灯的权限</string>
    <string name="too_an">环境过暗，请打开闪光灯</string>
    <string name="security_pass_word_old">旧密码:</string>
    <string name="security_pass_word_old_des">若包含字母，请注意区分大小写</string>
    <string name="security_pass_word_new">新密码:</string>
    <string name="security_pass_word_new_des">6-12位，至少含数字/字母2种组合</string>
    <string name="security_pass_word_pay_new_des">请使用6-12位大小写字母+数字排列组合</string>
    <string name="sc_dialog_title_email">若未收到验证码，请检查邮件垃圾箱</string>
    <string name="sc_dialog_title_phone">若未收到验证码，请检查骚扰拦截短信</string>
    <string name="sc_dialog_email">邮箱验证</string>
    <string name="sc_dialog_phone">手机号验证</string>
    <string name="sc_dialog_email_code_des">请输入邮箱验证码</string>
    <string name="sc_dialog_phone_code_des">请输入手机验证码</string>
    <string name="sc_get_code">获取验证码</string>
    <string name="sc_get_code_retry">秒后获取</string>
    <string name="sc_input_your_phone">请输入新的手机号</string>
    <string name="sc_input_your_email">请输入新的邮箱</string>
    <string name="sc_input_change">更换</string>
    <string name="security_google_identity">绑定谷歌身份验证</string>
    <string name="security_google_identity_title">请妥善备份密钥以防丢失</string>
    <string name="security_google_identity_des">保存二维码到手机或复制密钥到剪贴板可能会有安全风险，请妥善保存</string>
    <string name="security_google_code">谷歌验证码</string>
    <string name="security_google_code_des">请输入谷歌验证码</string>
    <string name="security_phone_binded_title">手机验证</string>
    <string name="security_phone_bind">绑定手机</string>
    <string name="security_phone_modify">更换手机号</string>
    <string name="security_phone_des">输入手机号</string>
    <string name="security_phone_code">短信验证码</string>
    <string name="security_phone_code_des">若未收到短信，请检查骚扰拦截短信</string>
    <string name="security_phone_error">未绑定手机，请选择其他验证</string>
    <string name="security_email_error">未绑定邮箱，请选择其他验证</string>
    <string name="security_success">修改成功</string>
    <string name="security_email_bind">绑定邮箱</string>
    <string name="security_email_modify">更换邮箱</string>
    <string name="security_email_address">输入邮箱地址</string>
    <string name="security_email_des">输入邮箱地址</string>
    <string name="security_email_code">邮箱验证码</string>
    <string name="security_email_code_des">输入邮箱验证码</string>
    <string name="security_name_update">更改昵称</string>
    <string name="security_name_update_hine">请输入名称</string>
    <string name="security_name_update_des">好名字可以让您的朋友更容易记住你</string>
    <string name="language_chinese_simple">简体中文</string>
    <string name="language_chinese_traditional">繁体中文</string>
    <string name="language_english">English</string>
    <string name="language_japan">日本语</string>
    <string name="language_korean">한국어</string>
    <string name="user_info_setting">个人信息</string>
    <string name="user_info_head_img">头像</string>
    <string name="user_info_nick">昵称</string>
    <string name="user_info_id">ID号</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_qrcode">二维码名片</string>
    <string name="user_info_area">地区</string>
    <string name="register_phone_area">请选择地区或国家</string>
    <string name="register_phone_area_des">请选择正确的区号格式</string>
    <string name="register_phone_area_search">搜索国家或地区</string>
    <string name="notice_no_msg">没有通知</string>
    <string name="list_footer_no_data">没有更多了</string>
    <string name="list_footer_loading">加载中</string>
    <string name="btn_sure">确认</string>
    <string name="btn_next">下一步</string>
    <string name="btn_reset">重置密码</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_send">发送</string>
    <string name="btn_save">保存</string>
    <string name="auto_scan">将条码放入框内，即可自动扫描</string>
    <string name="scan_qrcode">识别图片中的码</string>
    <string name="wt_language">语言</string>
    <string name="wt_make">创建钱包</string>
    <string name="wt_type_make">创建钱包类型</string>
    <string name="wt_type_change">去中心化的DAPP，冷热钱包自由切换</string>
    <string name="wt_type_chain">多链钱包</string>
    <string name="wt_type_online">在线钱包</string>
    <string name="wt_type_chain_describe">构建各种公链价值流转通道，实现多种数字\n资产业务创新</string>
    <string name="wt_type_online_describe">打造A13数字经济生态应用</string>
    <string name="wt_type_next">下一步</string>
    <string name="wt_type_has_alsc">已有在线钱包？</string>
    <string name="wt_type_login">登录</string>
    <string name="wt_btn_sure_add">确定添加</string>
    <string name="wc_code">创建多链钱包</string>
    <string name="wc_code_important">密码用于保护私钥与交易授权,强度非常重要。</string>
    <string name="wc_code_warn">非中心化系统的密码一旦丢失,则无法找回,请妥善保管!</string>
    <string name="wc_code_account">账户备注</string>
    <string name="wc_code_input_account">请输入账户名称</string>
    <string name="wc_code_input_wallet">请输入钱包名称</string>
    <string name="wc_code_wallet_pwd">钱包密码</string>
    <string name="wc_code_input_wallet_pwd">请输入钱包密码</string>
    <string name="wc_code_input_wallet_pwd1">确认新密码</string>
    <string name="wc_code_input_wallet_pwd_again">请确认新密码</string>
    <string name="wc_code_pwd_pattern">钱包密码建议至少8-16位:大写字母、小写字母、数字3种组成</string>
    <string name="create_wallet_name_repeat_tips">钱包名称重复</string>
    <string name="create_wallet_name_input_tips">请输入钱包名称</string>
    <string name="create_wallet_pwd_input_tips">密码不能为空</string>
    <string name="create_wallet_pwd_confirm_input_tips">密码不一致，请重新输入</string>
    <string name="deriving_wallet_tip">导出钱包中…</string>
    <string name="loading_wallet_tip">导入钱包中…</string>
    <string name="deleting_wallet_tip">删除钱包中…</string>
    <string name="creating_wallet_tip">创建钱包中…</string>
    <string name="saving_wallet_tip">保存钱包中…</string>
    <string name="saving_wallet_failure">创建钱包失败</string>
    <string name="verify_wallet_password_failure">验证密语失败，请重新输入</string>
    <string name="saving_wallet_password_length">钱包密码至少8位</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>
    <string name="wc_backup">备份</string>
    <string name="wc_backup_single">密语用于恢复钱包，请抄写12个单词并妥善保管</string>
    <string name="wc_backup_double">请勿截屏分享和储存，防止第三方恶意软件收集，造成资产损失</string>
    <string name="wc_backup_good">erro about learn kitchen stadium vivtory\nglimpse fluid hope place spriit gauge</string>
    <string name="wv_validate">验证</string>
    <string name="wv_done">完成</string>
    <string name="wv_reset">重新生成密语</string>
    <string name="wv_validate_sure">按照顺序点击密语，以确认正确备份</string>
    <string name="wv_tip">提示</string>
    <string name="wv_content">是否已抄完</string>
    <string name="wv_create_hot_wallet">还未创建在线钱包</string>
    <string name="wv_create_cold_wallet">还未创建多链钱包</string>
    <string name="wv_delete_cold_wallet">确定删除钱包吗</string>
    <string name="wv_login_out">确定退出登录吗</string>
    <string name="wv_auto_alsc">所有收益将自动按前1小时\n均价自动兑换成A13！</string>
    <string name="wc_hote">创建在线钱包</string>
    <string name="wc_hote_login">登录用户名</string>
    <string name="wc_hote_login_hint">请输入登录用户名</string>
    <string name="wc_hote_invate_code">输入邀请码</string>
    <string name="wc_hote_invate_code_hint">请输入邀请码(必填)</string>
    <string name="wc_hote_picture">输入图片验证码</string>
    <string name="wc_hote_please_input_picture_answer">请输入以下验证码答案</string>
    <string name="wc_hote_change">看不清,换一张</string>
    <string name="verify_backup_failed">备份失败，请检查你的助记词</string>
    <string name="wh_phone">手机验证</string>
    <string name="wh_phone_area_default">中国</string>
    <string name="wh_phone_area_code_default">+86</string>
    <string name="wh_phone_change">使用邮箱号或者手机号验证,二选其一即可</string>
    <string name="wh_phone_valite_hint">请输入你的手机</string>
    <string name="wh_phone_valite_number">请使用6-12位字母+数字</string>
    <string name="wh_phone_valite_letter_or_number">请使用6-12位字母或数字</string>
    <string name="wh_phone_valite_number_zoom">请使用6-12位字母+数字排列组合</string>
    <string name="wh_valite_number">输入验证码</string>
    <string name="wh_valite_number_hint">请输入验证码</string>
    <string name="wh_valite_number_get">获取验证码</string>
    <string name="wh_valite_email">邮箱验证</string>
    <string name="wh_email_valite_hint">请输入您的邮箱</string>
    <string name="wh_phone_valite_hint1">请输入您的手机</string>
    <string name="wh_phone_valite_number_hint">钱包密码建议至少8-16位：大写字母、小写字母、数字3种组成</string>
    <string name="wh_find_pwd_email">邮箱找回</string>
    <string name="wh_find_pwd_phone">手机找回</string>
    <string name="wh_set_pwd">设置密码</string>
    <string name="wh_set_pwd_save">登录密码用于登录A13钱包,支付密码用于保障\n您A13钱包的资产安全,请妥善保障.</string>
    <string name="wh_sp_login_pwd">登录密码</string>
    <string name="wh_sp_login_pwd_hint">请输入你的登录密码</string>
    <string name="wh_sp_login_pwd_sure">确认登录密码</string>
    <string name="wh_sp_login_pwd_sure_hint">请再次确认</string>
    <string name="wh_sp_pay_pwd">支付密码</string>
    <string name="wh_ok">确定</string>
    <string name="c_create">创建</string>
    <string name="c_wallet_password_1">m/44’/0’/0’/0 默认</string>
    <string name="c_wallet_password_2">m/44’/0’/0’/0 Ledger</string>
    <string name="c_wallet_password_3">m/44’/0’/0’/ 自定义路径</string>
    <string name="export_keystore_message">获取Keystore和密码等于拥有钱包资产所有权</string>
    <string name="export_save_offline">离线保存</string>
    <string name="export_save_offline_message">切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险</string>
    <string name="export_save_offline_remain">切勿使用网络传输</string>
    <string name="export_save_offline_remain_message">请勿通过网络工具传输，一旦被黑客获取将造成不可挽回的资产损失。建议离线设备通过二维码方式传输。</string>
    <string name="export_save_password">密码管理工具保存</string>
    <string name="export_save_password_advice">建议使用密码管理工具管理</string>
    <string name="export_copy_keystore">拷贝Keystore</string>
    <string name="export_code_scan">仅供直接扫描</string>
    <string name="export_code_scan_message">二维码禁止保存、截图、以及拍照。仅供用户在安全环境下直接扫描来方便的导入钱包。</string>
    <string name="export_code_safe">在安全环境下使用</string>
    <string name="export_code_safe_message">请在确保四周无人及无摄像头的情况下使用。二维码一旦被他人获取将造成不可挽回的资产损失</string>
</resources>