<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="13dp"
            android:text="@string/export_keystore_message"
            android:textColor="@color/text_color"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/corner_white_2"
            tools:text="dad87f02863458974ef2d19c4f06"
            android:textColor="@color/text_color_small1"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:visibility="gone"
                android:background="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/export_save_offline"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_15" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/export_save_offline_message"
            android:textColor="@color/text_color_small1"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:visibility="gone"
                android:background="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/export_save_offline_remain"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_15" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/export_save_offline_remain_message"
            android:textColor="@color/text_color_small1"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:visibility="gone"
                android:background="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/export_save_password"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_15" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/export_save_password_advice"
            android:textColor="@color/text_color_small1"
            android:textSize="13dp" />


        <TextView
            android:id="@+id/btn_next"
            style="@style/WalletColdBtn2Style"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:onClick="@{clickListener}"
            android:text="@string/export_copy_keystore" />
    </LinearLayout>
</layout>
