<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_252e3f_5"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/wv_tip"
        android:textColor="@color/text_color"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/wv_create_hot_wallet"
        android:textColor="@color/text_color"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_110000_20" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/id_textview_popup_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_cancle"
            android:textColor="@color/text_color_small"
            android:textSize="16dp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="26dp"
            android:background="@color/color_110000_20" />

        <TextView
            android:id="@+id/id_textview_popup_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/c_create"
            android:textColor="@color/color_208cf9"
            android:textSize="16dp" />

    </LinearLayout>
</LinearLayout>
