<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_qcode"
            android:layout_gravity="center_horizontal"
            android:layout_width="220dp"
            android:layout_marginTop="40dp"
            android:layout_height="220dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:visibility="gone"
                android:background="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/export_code_scan"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_15" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/export_code_scan_message"
            android:textColor="@color/text_color_small1"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="5dp"
                android:layout_height="15dp"
                android:visibility="gone"
                android:background="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/export_code_safe"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_15" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/export_code_safe_message"
            android:textColor="@color/text_color_small1"
            android:textSize="13dp" />
    </LinearLayout>
</layout>
